@@ -3,8 +3,7 @@ import xbmcvfs
 from abc import ABCMeta
 
 import mediatypes
-from utils import SortedDisplay, natural_sort
-from devhelper.utils import get_unstacked_path_list
+from utils import SortedDisplay, natural_sort, get_movie_path_list
 
 class ArtFilesAbstractProvider(object):
     __metaclass__ = ABCMeta
@@ -57,31 +56,30 @@ class ArtFilesMovieProvider(ArtFilesAbstractProvider):
     mediatype = mediatypes.MOVIE
 
     def get_exact_images(self, path):
-        paths = get_unstacked_path_list(path)
-        basefilenames = [os.path.splitext(os.path.basename(p))[0] for p in paths]
-        path = os.path.dirname(paths[0]) + '/'
-        _, files = xbmcvfs.listdir(path)
+        paths = get_movie_path_list(path)
         result = {}
-        for filename in files:
-            if not filename.endswith(('.jpg', '.png', '.gif')):
-                continue
-            basefile = os.path.splitext(filename)[0]
-            if '-' in basefile:
-                firstbit, basefile = basefile.rsplit('-', 1)
-                if firstbit not in basefilenames:
+        for dirname, moviefile in (os.path.split(p) for p in paths):
+            dirname += '/'
+            moviebase = os.path.splitext(moviefile)[0]
+            _, files = xbmcvfs.listdir(dirname)
+            for filename in files:
+                if not filename.endswith(('.jpg', '.png', '.gif')):
                     continue
-            if '.' in basefile or ' ' in basefile:
-                continue
-            if len(basefile) > 20:
-                continue
-            arttype = basefile
-
-            resultimage = {'url': path + filename, 'provider': self.name, 'preview': path + filename}
-            resultimage['title'] = filename
-            resultimage['rating'] = SortedDisplay(0, '')
-            resultimage['size'] = SortedDisplay(0, '')
-            resultimage['language'] = 'xx'
-            result[arttype] = resultimage
+                imagefile = os.path.splitext(filename)[0]
+                if '-' in imagefile:
+                    firstbit, imagefile = imagefile.rsplit('-', 1)
+                    if firstbit != moviebase:
+                        continue
+                if '.' in imagefile or ' ' in imagefile or len(imagefile) > 20:
+                    continue
+                arttype = imagefile
+                if arttype not in result:
+                    resultimage = {'url': dirname + filename, 'provider': self.name, 'preview': dirname + filename}
+                    resultimage['title'] = filename
+                    resultimage['rating'] = SortedDisplay(0, '')
+                    resultimage['size'] = SortedDisplay(0, '')
+                    resultimage['language'] = 'xx'
+                    result[arttype] = resultimage
         return result
 
 class ArtFilesEpisodeProvider(ArtFilesAbstractProvider):
